--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ form input[type="text"] {
 }
 
 form button {
-  background-color: #5cb85c;
+  background-color: #2980b9;
   color: #fff;
   border: none;
   padding: 10px;
@@ -51,7 +51,7 @@ form button {
 }
 
 form button:hover {
-  background-color: #4cae4c;
+  background-color: #2980b9;
 }
 
 #paymentResult {
